# incubator-teaclave-sgx-sdk

samplecode/project_template/: buildenv_sgx.mk  rust-toolchain.toml
samplecode/project_template/app/: Cargo.toml  Makefile  build.rs
samplecode/project_template/app/src/: main.rs
samplecode/project_template/enclave/: Cargo.toml  Enclave.edl  Makefile
samplecode/project_template/enclave/src/: lib.rs
