[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
