[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "template-enclave"
version = "0.1.0"
edition = "2018"
authors = ["The Teaclave Authors"]

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
